# nutpie

./: .gitignore  .nojekyll  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md  RELEASING.md  about.html  benchmarks.html  book.toml  cliff.toml  index.html  nf-adapt.html  pixi.toml  pymc-usage.html  pyproject.toml  sample-stats.html  sampling-options.html  search.json  stan-usage.html
.github/: dependabot.yml  uv-constraints-dev.txt  uv-constraints-main.txt
.github/workflows/: ci.yml  maturin-upload.yml
benches/: run_tvm_leapfrog.rs_old
docs/: SUMMARY.md  _quarto.yml  about.qmd  index.qmd  nf-adapt.md  nf-adapt.qmd  pymc-usage.md  pymc-usage.qmd  quickstart.md  sample-stats.qmd  sampling-options.qmd  stan-usage.md  stan-usage.qmd
docs/_freeze/index/execute-results/: html.json
docs/_freeze/nf-adapt/execute-results/: html.json
docs/_freeze/pymc-usage/execute-results/: html.json
docs/_freeze/sample-stats/execute-results/: html.json
docs/_freeze/stan-usage/execute-results/: html.json
notebooks/: aesara_logp.ipynb  aesara_logp.md  pytensor_logp.ipynb  pytensor_logp.md
nutpie/: __init__.py  compile_pymc.py  compile_stan.py  sample.py
nuts_py/: __init__.py  compile_pymc.py  compile_stan.py  convert.py  sample.py
python/nutpie/: __init__.py  compile_onnx.py  compile_pymc.py  compile_stan.py  compiled_pyfunc.py  flow_reparam.py  normalizing_flow.py  sample.py  sampling.py  transform_adapter.py
site_libs/bootstrap/: bootstrap-e212f1f3c46809d555a1335ea96b499f.min.css
src/: common.rs  iree.rs  lib.rs  ort.rs  progress.rs  pyfunc.rs  pymc.rs  sampler.rs  stan.rs  torch.rs  wrapper.rs
tests/: test_flow_reparam.py  test_log_likelihood_integration.py  test_pymc.py  test_stan.py
tests/reference/: test_deterministic_sampling_jax.txt  test_deterministic_sampling_mlx.txt  test_deterministic_sampling_numba.txt  test_deterministic_sampling_stan.txt  test_normalizing_flow.txt
