[package]
name = "nutpie"
version = "0.15.1"
authors = [
  "Adrian Seyboldt <adrian.seyboldt@gmail.com>",
  "PyMC Developers <pymc.devs@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/pymc-devs/nutpie"
keywords = ["statistics", "bayes"]
description = "Python wrapper for nuts-rs -- a NUTS sampler written in Rust."
rust-version = "1.76"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "_lib"
crate-type = ["cdylib"]

[dependencies]
nuts-rs = "0.16.1"
numpy = "0.25.0"
rand = "0.9.0"
thiserror = "2.0.3"
rand_chacha = "0.9.0"
rayon = "1.10.0"
# Keep arrow in sync with nuts-rs requirements
arrow = { version = "55.1.0", default-features = false, features = ["ffi"] }
anyhow = "1.0.72"
itertools = "0.14.0"
bridgestan = "2.6.1"
rand_distr = "0.5.0"
smallvec = "1.14.0"
upon = { version = "0.9.0", default-features = false, features = [] }
time-humanize = { version = "0.1.3", default-features = false }
indicatif = "0.17.8"
tch = { version = "0.20.0", optional = true }

[dependencies.pyo3]
version = "0.25.0"
features = ["extension-module", "anyhow"]

[dev-dependencies]
criterion = "0.6.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.bench]
debug = true
lto = "fat"
