[package]
name = "nutpie"
version = "0.16.5"
authors = [
  "Adrian Seyboldt <adrian.seyboldt@gmail.com>",
  "PyMC Developers <pymc.devs@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/pymc-devs/nutpie"
keywords = ["statistics", "bayes"]
description = "Python wrapper for nuts-rs -- a NUTS sampler written in Rust."
rust-version = "1.89"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "_lib"
crate-type = ["cdylib"]

[dependencies]
nuts-rs = { version = "0.17.3", features = ["zarr", "arrow"] }
numpy = "0.27.0"
rand = "0.9.0"
thiserror = "2.0.3"
rand_chacha = "0.10.0"
rayon = "1.11.0"
anyhow = "1.0.72"
itertools = "0.14.0"
bridgestan = "2.7.0"
rand_distr = "0.5.0"
smallvec = "1.15.0"
upon = { version = "0.10.0", default-features = false, features = [] }
time-humanize = { version = "0.1.3", default-features = false }
indicatif = "0.18.0"
tch = { version = "0.23.0", optional = true }
pyo3-object_store = "0.8.0"
# Keep zarrs crates in sync with nuts-rs requirements
zarrs = { version = "0.22.2", features = ["async"] }
zarrs_object_store = "0.6.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"] }
pyo3-arrow = "0.15.0"
arrow = { version = "57.0.0", features = ["json"] }

[dependencies.pyo3]
version = "0.27.1"
features = ["extension-module", "anyhow"]

[dev-dependencies]
criterion = "0.8.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.bench]
debug = true
lto = "fat"
