[package]
name = "nutpie"
version = "0.16.10"
authors = [
  "Adrian Seyboldt <adrian.seyboldt@gmail.com>",
  "PyMC Developers <pymc.devs@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/pymc-devs/nutpie"
keywords = ["statistics", "bayes"]
description = "Python wrapper for nuts-rs -- a NUTS sampler written in Rust."
rust-version = "1.89"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "_lib"
crate-type = ["cdylib"]

[dependencies]
nuts-rs = { version = "0.18.0", features = ["zarr", "arrow"] }
numpy = "0.28.0"
rand = "0.10.0"
thiserror = "2.0.3"
rand_chacha = "0.10.0"
rayon = "1.11.0"
anyhow = "1.0.72"
itertools = "0.14.0"
bridgestan = "2.7.0"
rand_distr = "0.6.0"
smallvec = "1.15.0"
upon = { version = "0.10.0", default-features = false, features = [] }
time-humanize = { version = "0.1.3", default-features = false }
indicatif = "0.18.0"
tch = { version = "0.24.0", optional = true }
pyo3-object_store = "0.9.0"
# Keep zarrs crates in sync with nuts-rs requirements
zarrs = { version = "0.23.2", features = ["async"] }
zarrs_object_store = "0.6.0"
pyo3-arrow = "0.17.0"
arrow = { version = "58.1.0", features = ["json"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pythonize = "0.28.0"

[dependencies.pyo3]
version = "0.28.0"
features = ["extension-module", "anyhow"]

[dev-dependencies]
criterion = "0.8.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.bench]
debug = true
lto = "fat"
