[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "nutpie"
description = "Sample Stan or PyMC models"
version = "0.14.0"
authors = [{ name = "PyMC Developers", email = "pymc.devs@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "pyarrow >= 12.0.0",
  "pandas >= 2.0",
  "xarray >= 2023.06.0",
  "arviz >= 0.15.0",
]

[project.optional-dependencies]
stan = ["bridgestan >= 2.4.1"]
pymc = ["pymc >= 5.15.0", "numba >= 0.59.1"]
pymc-jax = ["pymc >= 5.15.0", "jax >= 0.4.27"]
all = [
  "bridgestan >= 2.4.1",
  "pymc >= 5.15.0",
  "numba >= 0.59.1",
  "jax >= 0.4.27",
]

[tool.ruff]
line-length = 88
target-version = "py310"
show-fixes = true
output-format = "full"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["nutpie"]

[tool.pyright]
venvPath = ".pixi/envs/"
venv = "default"

[tool.maturin]
module-name = "nutpie._lib"
python-source = "python"
features = ["pyo3/extension-module"]
