[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "nutpie"
description = "Sample Stan or PyMC models"
authors = [{ name = "PyMC Developers", email = "pymc.devs@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "pyarrow >= 12.0.0",
  "pandas >= 2.0",
  "xarray >= 2025.01.2",
  "arviz >= 0.20.0",
]
dynamic = ["version"]

[project.optional-dependencies]
stan = ["bridgestan >= 2.6.1"]
pymc = ["pymc >= 5.20.1", "numba >= 0.60.0"]
pymc-jax = ["pymc >= 5.20.1", "jax >= 0.4.27"]
nnflow = ["flowjax >= 17.1.0", "equinox >= 0.11.12"]
dev = [
  "bridgestan >= 2.6.1",
  "pymc >= 5.20.1",
  "numba >= 0.60.0",
  "jax >= 0.4.27",
  "flowjax >= 17.0.2",
  "pytest",
  "pytest-timeout",
]
all = [
  "bridgestan >= 2.6.1",
  "pymc >= 5.20.1",
  "numba >= 0.60.0",
  "jax >= 0.4.27",
  "flowjax >= 17.1.0",
  "equinox >= 0.11.12",
]

[tool.ruff]
line-length = 88
target-version = "py310"
show-fixes = true
output-format = "full"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["nutpie"]

[tool.pyright]
venvPath = ".pixi/envs/"
venv = "default"

[tool.maturin]
module-name = "nutpie._lib"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
markers = [
    "flow: tests for normalizing flows",
    "stan: tests for Stan models",
    "pymc: tests for PyMC models",
]
