[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "nutpie"
description = "Sample Stan or PyMC models"
authors = [{ name = "PyMC Developers", email = "pymc.devs@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "pyarrow >= 12.0.0",
  "arro3-core >= 0.6.0",
  "pandas >= 2.0",
  "platformdirs >= 3.0.0",
  "xarray >= 2025.01.2",
  "arviz >= 0.23.0,<2.0",
  "obstore >= 0.8.0",
  "zarr >= 3.1.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://pymc-devs.github.io/nutpie/"
Repository = "https://github.com/pymc-devs/nutpie"

[project.optional-dependencies]
stan = ["bridgestan >= 2.7.0", "stanio >= 0.5.1"]
pymc = ["pymc >= 5.20.1", "numba >= 0.60.0"]
pymc-jax = ["pymc >= 5.20.1", "jax >= 0.4.27"]
pymc-mlx = ["pymc >= 5.20.1", "mlx >= 0.29.0"]
nnflow = ["flowjax >= 17.1.0", "equinox >= 0.11.12"]
dev = [
  "bridgestan >= 2.7.0",
  "stanio >= 0.5.1",
  "pymc >= 5.20.1",
  "numba >= 0.60.0",
  "jax >= 0.4.27",
  "mlx >= 0.29.0",
  "flowjax >= 17.0.2",
  "pytest",
  "pytest-timeout",
  "pytest-arraydiff",
]
all = [
  "bridgestan >= 2.7.0",
  "stanio >= 0.5.1",
  "pymc >= 5.20.1",
  "numba >= 0.60.0",
  "jax >= 0.4.27",
  "mlx >= 0.29.0",
  "flowjax >= 17.1.0",
  "equinox >= 0.11.12",
]
docs = [
  "bridgestan >= 2.7.0",
  "stanio >= 0.5.1",
  "pymc >= 5.20.1",
  "numba >= 0.60.0",
  "jax >= 0.4.27",
  "flowjax >= 17.1.0",
  "equinox >= 0.11.12",
  "cmdstanpy >= 1.2.0",
  "matplotlib >= 3.8.0",
  "seaborn >= 0.13.0",
  "jupyter",
]

[tool.ruff]
line-length = 88
target-version = "py312"
show-fixes = true
output-format = "full"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["nutpie"]

[tool.maturin]
module-name = "nutpie._lib"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
markers = [
  "flow: tests for normalizing flows",
  "stan: tests for Stan models",
  "pymc: tests for PyMC models",
]
